provide smartId-to-cat mapping
